--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,7 @@
 PORT=4000
 MONGODB_URI=mongodb://localhost:27017/blog_cms
+MONGODB_URI_DOCKER=mongodb://mongo:27017/blog_cms
 JWT_SECRET=your_jwt_secret
 JWT_EXPIRES_IN=1h
+BCRYPT_ROUNDS=10
+DOCKER_ENV=true
